<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculadoraSpinner">

    <Button
        android:id="@+id/calcular_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="83dp"
        android:onClick="calcular"
        android:text="@string/btn_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opc_calc" />

    <TextView
        android:id="@+id/result_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        android:text="@string/txt_resultado"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcular_btn" />

    <TextView
        android:id="@+id/res_txt"
        android:layout_width="185dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="526dp"
        android:layout_marginEnd="60dp"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/result_txt"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/primer_num"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/txt_num1"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColorHint="#78909C" />

    <EditText
        android:id="@+id/seg_num"
        android:layout_width="284dp"
        android:layout_height="49dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/txt_num2"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primer_num"
        tools:textColorHint="#78909C" />

    <Spinner
        android:id="@+id/opc_calc"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="49dp"
        android:backgroundTint="#00E1E0E0"
        android:entries="@array/opc_calc_array"
        android:foregroundTint="#00673AB7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seg_num" />

    <Button
        android:id="@+id/btn_volver2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="83dp"
        android:onClick="volver"
        android:text="@string/btn_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/result_txt"
        app:layout_constraintTop_toBottomOf="@+id/res_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>